--- a/app/globals.css
+++ b/app/globals.css
@@ -5,9 +5,10 @@
 .background {
     background: rgb(0, 0, 0);
     background: linear-gradient(
-        45deg,
+        135deg,
         rgba(0, 0, 0, 1) 0%,
-        rgba(245, 68, 68, 1) 100%
+        rgba(105, 0, 31, 1) 50%,
+        rgba(5, 0, 32, 1) 100%
     );
 }
 
