Refactor home page structure, update navigation links, and enhance styles for better user experience

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,13 +3,38 @@
 @tailwind utilities;
 
 .background {
+    background: rgb(64, 0, 0);
+    background: linear-gradient(
+        130deg,
+        rgba(64, 0, 0, 1) 0%,
+        rgba(17, 5, 14, 1) 50%,
+        rgba(0, 0, 32, 1) 100%
+    );
+    background-size: 400% 400%;
+    animation: gradientAnimation 10s ease infinite;
+}
+
+.landingBG {
     background: rgb(0, 0, 0);
     background: linear-gradient(
-        135deg,
+        45deg,
         rgba(0, 0, 0, 1) 0%,
-        rgba(105, 0, 31, 1) 50%,
-        rgba(5, 0, 32, 1) 100%
+        rgba(0, 0, 71, 1) 100%
     );
+    background-size: 400% 400%;
+    animation: gradientAnimation 5s ease infinite;
+}
+
+@keyframes gradientAnimation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 .logcss {
@@ -20,6 +45,29 @@
         rgba(102, 0, 0, 1) 100%
     );
 }
+
 .trend {
     text-shadow: 0 0 10px rgba(255, 255, 58, 0.728);
+}
+
+.shadow-2xl {
+    box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+}
+
+.rounded-lg {
+    border-radius: 0.5rem;
+}
+
+.animate-pulse {
+    animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+@keyframes pulse {
+    0%,
+    100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
 }
